--- a/views/instrutores/index.njk
+++ b/views/instrutores/index.njk
@@ -25,7 +25,9 @@
             {{instrutor.name}}
           </td>
 
-          <td data-label="Atendimento"> {{instrutor.services}} </td>
+          <td data-label="Atendimento"> 
+              {{instrutor.services}}
+          </td>
 
           <td><a href="/instrutores/{{instrutor.id}}">ver</a></td>
 
