Correção do titulo idade para aniversario em membros

--- a/views/membros/show.njk
+++ b/views/membros/show.njk
@@ -24,7 +24,7 @@
       </div>
 
       <div class="item">
-        <div>Idade</div>
+        <div>Aniversário</div>
         <div>{{membro.age}}</div>
       </div>
 
